2012-12-28  Russ Allbery  <rra@stanford.edu>

	* ANSIColor.pm: $AUTOLOCAL takes precedence over $AUTORESET,
	reversing the previous behvior.  Document the precedence.
	* t/basic.t: Test for $AUTOLOCAL vs. $AUTORESET precedence.

	* t/taint.t: New check for proper untainting in AUTOLOAD.
	* ANSIColor.pm: Comment the untainting of $AUTOLOAD so that it
	isn't accidentally removed as apparently unnecessary.

	* t/strict.t: Ignore t/taint.t for coverage checking, since
	Test::Strict doesn't know how to invoke tests that require
	tainting.

	* t/strict.t: Add test suite coverage checking if running the test
	in maintainer mode.
	* ANSIColor.pm (AUTOLOAD): Drop a redundant check on the result of
	eval so that 100% test coverage can be achieved.
	* t/basic.t: Remove taint checking, which is incompatible with
	coverage testing.  Add tests to achieve 100% coverage.
	* t/eval.t: Remove taint checking.
	* t/stringify.t: Likewise.

	* ANSIColor.pm: Document $Term::ANSIColor::AUTOLOCAL.

	* ANSIColor.pm (AUTOLOAD): Support ANSI_COLORS_DISABLED in the
	generated constant subs.  Fixes a bug where the environment
	variable would be ignored if the constant were used before it was
	set.
	* t/basic.t: Test for properl ANSI_COLORS_DISABLED support in
	generated constant subs.

	* t/critic.t: New test that runs perlcritic (and perltidy) on all
	source files and checks for violations.
	* t/data/perlcriticrc: New file.
	* t/data/perltidyrc: New file.
	* ANSIColor.pm: Substantial reworking to improve coding style and
	layout.  Update to Perl 5.6 syntax.  Unconditionally load Carp for
	simplicity.
	* Makefile.PL: Require Perl 5.6.  Remove conditionals for
	configuration that was not supported prior to Perl 5.6.
	* t/basic.t: Update coding style.
	* t/eval.t: Likewise.
	* t/stringify.t: Likewise.

	* t/minimum-version.t: New test for the minimum required version
	of Perl.

	* t/pod-coverage.t: New test for POD coverage.

	* ANSIColor.pm: Add use warnings.