@@ -11,7 +11,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 136;
+use Test::More tests => 138;
 
 # Load the module.
 BEGIN {
@@ -49,9 +49,11 @@ is(
     'colored with reference to array'
 );
 
-# Basic test for uncolor.
+# Basic tests for uncolor.
 is_deeply([uncolor('1;42', "\e[m", q{}, "\e[0m")],
     [qw(bold on_green clear)], 'uncolor');
+is_deeply([uncolor("\e[m")], [], 'uncolor("\\e[m")');
+is_deeply([uncolor(q{})],    [], 'uncolor("")');
 
 # Several tests for ANSI_COLORS_DISABLED.
 local $ENV{ANSI_COLORS_DISABLED} = 1;
